# efficient-detection-intermittent-job-failures

./: .gitignore  LICENSE  README.md  pyproject.toml
data/logs/: .gitkeep
data/results/: cross_project_performance.csv  failure_reasons.csv  labeling_error_results.csv  mislabeled_failure_reasons.csv  statistics.csv
data/results/baselines/: veloren_saved.csv
data/results/runs/: veloren.csv  veloren_saved.csv
notebooks/: RQ1_labeling_error.ipynb  RQ3_fsl_cross_project.ipynb  data_preparation.ipynb  exploratory_analysis.ipynb
src/labeling/: __init__.py  load_dataset.py  similarity_search.py
src/models/: evaluator.py  hp_search.py  run.py
src/models/baselines/: __init__.py  sota_brown_detector.py  utils.py
src/preprocessing/: log.py  prepare_data.py  reduce_mem_usage.py
src/utils/: __init__.py  constants.py  utils.py  visualization.py
